--- a/MaintenanceSystem/src/msystem/EditInventory.form
+++ b/MaintenanceSystem/src/msystem/EditInventory.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.8" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
     <Component class="javax.swing.ButtonGroup" name="buttonGroup1">
     </Component>
@@ -152,7 +152,7 @@
         <Property name="text" type="java.lang.String" value="New Request"/>
       </Properties>
       <Events>
-        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="editInventoryNewRequestRadioMouseClicked"/>
+        <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="editInventoryNewRequestRadioStateChanged"/>
       </Events>
     </Component>
     <Component class="javax.swing.JRadioButton" name="editInventoryCurrentInventoryRadio">
@@ -164,7 +164,7 @@
         <Property name="text" type="java.lang.String" value="Current Inventory"/>
       </Properties>
       <Events>
-        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="editInventoryCurrentInventoryRadioMouseClicked"/>
+        <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="editInventoryCurrentInventoryRadioStateChanged"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
@@ -241,7 +241,9 @@
     <Component class="javax.swing.JButton" name="editInventorySearchInventory">
       <Properties>
         <Property name="text" type="java.lang.String" value="Search Inventory"/>
-        <Property name="toolTipText" type="java.lang.String" value="Searches inventory based on Inventory ID"/>
+        <Property name="toolTipText" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="&quot;Searches inventory based on Inventory ID\nPrimary first&quot;" type="code"/>
+        </Property>
       </Properties>
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="editInventorySearchInventoryMouseClicked"/>
