--- a/MaintenanceSystem/src/msystem/EditInventory.form
+++ b/MaintenanceSystem/src/msystem/EditInventory.form
@@ -242,7 +242,7 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Search Inventory"/>
         <Property name="toolTipText" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="&quot;Searches inventory based on Inventory ID\nPrimary first&quot;" type="code"/>
+          <Connection code="&quot;Searches inventory based on Inventory ID -- Primary first&quot;" type="code"/>
         </Property>
       </Properties>
       <Events>
