Added LimitAccess() method in MainPage
to determine which tabs will be shown or hidden.

--- a/MaintenanceSystem/src/msystem/UserAuth.form
+++ b/MaintenanceSystem/src/msystem/UserAuth.form
@@ -110,6 +110,9 @@
       <Events>
         <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtUsercodeFocusLost"/>
       </Events>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="4"/>
+      </AuxValues>
     </Component>
     <Component class="javax.swing.JPasswordField" name="jpfPassword">
     </Component>
