--- a/MaintenanceSystem/src/msystem/CheckInScreen.form
+++ b/MaintenanceSystem/src/msystem/CheckInScreen.form
@@ -59,7 +59,8 @@
                           </Group>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
-                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          <Component id="checkinFinishedBtn" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                           <Component id="checkinCancelBtn" min="-2" pref="99" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="checkinCheckInBtn" min="-2" pref="99" max="-2" attributes="0"/>
@@ -95,6 +96,7 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="checkinCheckInBtn" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="checkinCancelBtn" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="checkinFinishedBtn" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
               </Group>
@@ -183,6 +185,14 @@
             </Component>
           </SubComponents>
         </Container>
+        <Component class="javax.swing.JButton" name="checkinFinishedBtn">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Finished"/>
+          </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="checkinFinishedBtnMouseClicked"/>
+          </Events>
+        </Component>
       </SubComponents>
     </Container>
   </SubComponents>
